--- a/app/src/main/res/drawable/backgroundcolor_app.xml
+++ b/app/src/main/res/drawable/backgroundcolor_app.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:startColor="@color/midnight_green"
-        android:endColor="@color/blue_sapphire"
+        android:endColor="@color/oxford_blue"
         android:angle="90"/>
 </shape>
