--- a/app/src/main/res/drawable/backgroundcolor_app.xml
+++ b/app/src/main/res/drawable/backgroundcolor_app.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="@color/midnight_green"
+        android:startColor="@color/oxford_blue2"
         android:endColor="@color/oxford_blue"
         android:angle="90"/>
 </shape>
